discussion/kv_engine/177022/177022_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

[Refactor] Move subdoc tests to individual test cases

This makes it easier to debug a test failure

Change-Id: I80c40386e86dd500154a2519d0901c7a58d5632e

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-07-04 09:06:02.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-07-04 10:07:21.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19702/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19702/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21467/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21467/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8264/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8264/ )

Clang linker error: linker command failed due to signal (use -v to see invocation) ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8264/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20476/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20476/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28859/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28859/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18592/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/metering_test.cc:325:30: error: no member named "this_thread" in namespace "std" [clang-diagnostic-error]
                        std::this_thread::sleep_for(
                             ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18592/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/metering_test.cc:325:30:
error: no member named "this_thread" in namespace "std" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18592/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20826/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20826/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17744/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47357/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39804/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8363/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
